--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="Assets/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -32,11 +32,62 @@
         <section class="tuto">
         <h2>Fonctionnement</h2>
         <ol>
-            <li>Choisissez un restaurants</li>
-            <li>Composez votre menu</li>
-            <li>Dégustez au restaurants</li>
+            <li><i class="fas fa-mobile-alt"></i> Choisissez un restaurants</li>
+            <li><i class="fas fa-list-ul"></i> Composez votre menu</li>
+            <li><i class="fas fa-store"></i> Dégustez au restaurants</li>
         </ol>
         </section>
+        <section class="menu">
+            <h2>Restaurants</h2>
+             <div class="menucard">
+                <a href="./restaurant-1.html" class="card new">
+                <img class="cardimage" src="./asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image verre de vin">
+                <div class="carddescription">
+                    <h3>La palette de goût</h3>
+                    <p>Ménilmontant</p>
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
+                </div>
+                </a>
+                <a href="#" class="card new">
+                    <img class="cardimage" src="./asset/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image verre de vin">
+                    <div class="carddescription">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    </a>
+                    <a href="#" class="card">
+                        <img class="cardimage" src="./asset/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image verre de vin">
+                        <div class="carddescription">
+                        <h3> À la française</h3>
+                        <p> Cité Rouge</p>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                        </div>
+                        </a>
+                        <a href="#" class="card">
+                            <img class="cardimage" src="./asset/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image verre de vin">
+                            <div class="carddescription">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            </a>
+             </div>
+        </section>
     </main>
+        <footer class="foot">
+            <p>ohmyfood</p>
+            <ul>
+                <li><i class="fas fa-utensils"></i>  Proposer un restaurant</li>
+                <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
+        </footer>
+    
 </body>
 </html>
