changement width menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="menu">
             <h2>Restaurants</h2>
              <div class="menucard">
-                <a href="./restaurant-1.html" class="card new">
+                <a href="./pages/restaurant-1.html" class="card new">
                 <img class="cardimage" src="./asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image verre de vin">
                 <div class="carddescription">
                     <h3>La palette de goût</h3>
@@ -79,15 +79,15 @@
              </div>
         </section>
     </main>
-        <footer class="foot">
-            <p>ohmyfood</p>
-            <ul>
-                <li><i class="fas fa-utensils"></i>  Proposer un restaurant</li>
-                <li><i class="fas fa-hands-helping"></i> Devenir partenaire</li>
-                <li>Mentions légales</li>
-                <li>Contact</li>
-            </ul>
-        </footer>
+    <footer class="footer">
+        <p class="title-footer">ohmyfood</p>
+        <ul class="list">
+            <li><i class="fas fa-utensils icon-footer"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
