--- a/pages/restaurant-1.html
+++ b/pages/restaurant-1.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="../style2.css">
 </head>
 <body>
     <header>
-         <a href="./index.html">
+         <a href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
          </a>
         <h1>ohmyfood</h1>
@@ -121,7 +121,7 @@
         </div>
     </main>
     <footer class="footer">
-        <h2 class="title-footer">ohmyfood</h2>
+        <p class="titlefooter">ohmyfood</p>
         <ul class="list">
             <li><i class="fas fa-utensils icon-footer"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</li>
