--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -20,12 +20,12 @@
          </a>
         <h1>ohmyfood</h1>
     </header>
-    <img class="imageresto" src="../asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image verre de vin">
+    <img class="imageresto" src="../asset/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image verre de vin">
     <main>
         <div class="restomain">
             <div class="menu-container">
                 <div class="title-restaurant">
-                    <h2 class="title-menu-restaurant">La palette du goût</h2>
+                    <h2 class="title-menu-restaurant">La note enchantée</h2>
                     <i class="far fa-heart heart-menu"></i>
                     <i class="fas fa-heart heart-menu-full"></i>
                 </div>
@@ -34,8 +34,8 @@
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'Espelette</p>
+                            <h4>Ravioles de foie gras</h4>
+                            <p>Accompagnées de leur crème à la truffe</p>
                         </div>
                         <p class="prix">25€</p>
                         <div class="check">
@@ -45,68 +45,76 @@
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h4>Caviar osciètre</h4>
+                            <p>sur blini à la farine de blé noire</p>
                         </div>
                         <p class="prix">35€</p>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>OEuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h4>Homard et espuma de potiron</h4>
+                            <p>Marinés aux zestes d'orange</p>
                         </div>
                         <p class="prix">2O€</p>
                     </div>
+                    <div class="menucategory">
+                        <div class="menuitems">
+                            <div class="menudescription">
+                                <h4>Foie gras de canard cuit entier</h4>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <p class="prix">35€</p>
+                        </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h4>Noix de coquilles Saint-Jacques</h4>
+                            <p>Sur lit de purée de céléri-rave</p>
                         </div>
                         <p class="prix">40€</p>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Parmentier de queue de boeuf</h4>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <h4>Langoustine poêlée</h4>
+                                <p>Purée de patate douce</p>
                             </div>
                             <p class="prix">35€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Filet de turbot</h4>
-                                <p>Aux agrumes</p>
+                                <h4>Mijotée de queue de boeuf</h4>
+                                <p>ET riz sauvage aux zestes de citron</p>
                             </div>
-                            <p class="prix">44€</p>
+                            <p class="prix">45€</p>
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Paris-Brest</h4>
-                                <p>Revisité</p>
+                                <h4>Macaron noisette et chocolat</h4>
+                                <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <p class="prix">18€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Macaron au chocolat d'exeception</h4>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <h4>Baba au rhum revisité</h4>
+                                <p>Avec son coulis de citron</p>
                             </div>
                             <p class="prix">22€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Mousse au chocolat</h4>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <h4>Tarte au citron meringuée</h4>
+                                <p>Déstructurée</p>
                             </div>
                             <p class="prix">23€</p>
                         </div>
