--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <main>
         <div class="city">
-            <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-map-marker-alt icon "></i>
             <h2>Paris, Belleville</h2>
         </div>
         <section class="explorer">
@@ -45,35 +45,35 @@
                 <div class="carddescription">
                     <h3>La palette de goût</h3>
                     <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i>
-                    <i class="fas fa-heart"></i>
+                    <i class="far fa-heart "></i>
+                    <i class="fas fa-heart coeur"></i>
                 </div>
                 </a>
-                <a href="#" class="card new">
+                <a href="./pages/restaurant-2.html" class="card new">
                     <img class="cardimage" src="./asset/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image verre de vin">
                     <div class="carddescription">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                         <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-heart coeur"></i>
                     </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="./pages/restaurant-3.html" class="card">
                         <img class="cardimage" src="./asset/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image verre de vin">
                         <div class="carddescription">
                         <h3> À la française</h3>
                         <p> Cité Rouge</p>
                         <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-heart coeur"></i>
                         </div>
                         </a>
-                        <a href="#" class="card">
+                        <a href="./pages/restaurant-4.html" class="card">
                             <img class="cardimage" src="./asset/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image verre de vin">
                             <div class="carddescription">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                                 <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-heart coeur"></i>
                             </div>
                             </a>
              </div>
@@ -85,7 +85,7 @@
             <li><i class="fas fa-utensils icon-footer"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping icon-footer"></i> Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Contact</li>
+            <li><a class="contact" href="mailto:karimaitbamoussa@yahoo.fr">Contact</a></li>
         </ul>
     </footer>
     
