--- a/pages/restaurant-2.html
+++ b/pages/restaurant-2.html
@@ -20,12 +20,12 @@
          </a>
         <h1>ohmyfood</h1>
     </header>
-    <img class="imageresto" src="../asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image verre de vin">
+    <img class="imageresto" src="../asset/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image verre de vin">
     <main>
         <div class="restomain">
             <div class="menu-container">
                 <div class="title-restaurant">
-                    <h2 class="title-menu-restaurant">La palette du goût</h2>
+                    <h2 class="title-menu-restaurant">Le délice du sens</h2>
                     <i class="far fa-heart heart-menu"></i>
                     <i class="fas fa-heart heart-menu-full"></i>
                 </div>
@@ -34,8 +34,8 @@
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'Espelette</p>
+                            <h4>Tartare de thon</h4>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <p class="prix">25€</p>
                         <div class="check">
@@ -45,42 +45,42 @@
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h4>Bouchée de homard croustillant</h4>
+                            <p>Et sea farandole de petits légumes</p>
                         </div>
                         <p class="prix">35€</p>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>OEuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h4>Poulet rôti aux herbes de provence</h4>
+                            <p>Et sa crème de truffe</p>
                         </div>
-                        <p class="prix">2O€</p>
+                        <p class="prix">4O€</p>
                     </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h4>Poulet rôti aux herbes de provence</h4>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         <p class="prix">40€</p>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Parmentier de queue de boeuf</h4>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <h4>Langouste rôtie</h4>
+                                <p>Et ses légumes de saison</p>
                             </div>
                             <p class="prix">35€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Filet de turbot</h4>
-                                <p>Aux agrumes</p>
+                                <h4>Côte de boeufAngus</h4>
+                                <p>et sa purée de panais</p>
                             </div>
                             <p class="prix">44€</p>
                         </div>
@@ -89,24 +89,24 @@
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Paris-Brest</h4>
-                                <p>Revisité</p>
+                                <h4>Farandole de desserts</h4>
+                                <p>Du chef</p>
                             </div>
                             <p class="prix">18€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Macaron au chocolat d'exeception</h4>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <h4>Crème brulée</h4>
+                                <p>Revisitée</p>
                             </div>
                             <p class="prix">22€</p>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
-                                <h4>Mousse au chocolat</h4>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <h4>Tiramitsu</h4>
+                                <p>À la noisette</p>
                             </div>
                             <p class="prix">23€</p>
                         </div>
