--- a/pages/restaurant-4.html
+++ b/pages/restaurant-4.html
@@ -49,6 +49,9 @@
                             <p>Carotte,panais,topinambour</p>
                         </div>
                         <p class="prix">35€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -57,6 +60,9 @@
                             <p>Revisitée</p>
                         </div>
                         <p class="prix">2O€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
@@ -67,6 +73,9 @@
                             <p>Accompagné d'une purée de panais</p>
                         </div>
                         <p class="prix">40€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -75,6 +84,9 @@
                                 <p>Et parmentier de pomme de terre</p>
                             </div>
                             <p class="prix">35€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -83,6 +95,9 @@
                                 <p>Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <p class="prix">44€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
@@ -93,6 +108,9 @@
                                 <p>Et purée de noisettes</p>
                             </div>
                             <p class="prix">18€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -101,6 +119,9 @@
                                 <p>Revisité</p>
                             </div>
                             <p class="prix">22€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -109,6 +130,9 @@
                                 <p>Myrtilles et pâte d'amande</p>
                             </div>
                             <p class="prix">23€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
