--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loader">
+        <h2 class="loadertitle">ohmyfood</h2>
+    </div>
     <header>
         <h1>ohmyfood</h1>
     </header>
