--- a/pages/restaurant-1.html
+++ b/pages/restaurant-1.html
@@ -31,7 +31,7 @@
                 </div>
             <section class="menus">
                 <h3 class="titremenu">ENTRÉE</h3>
-                <div class="menucategory">
+                <div class="menucategory delay1">
                     <div class="menuitems">
                         <div class="menudescription">
                             <h4>Fricassée d'escargot</h4>
@@ -49,6 +49,9 @@
                             <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <p class="prix">35€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -57,16 +60,22 @@
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <p class="prix">2O€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
-                <div class="menucategory">
+                <div class="menucategory delay2">
                     <div class="menuitems">
                         <div class="menudescription">
                             <h4>Filet de boeuf aux herbes</h4>
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <p class="prix">40€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -75,6 +84,9 @@
                                 <p>À la truffe noire sur sa purée de panais</p>
                             </div>
                             <p class="prix">35€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -83,16 +95,22 @@
                                 <p>Aux agrumes</p>
                             </div>
                             <p class="prix">44€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
-                    <div class="menucategory">
+                    <div class="menucategory delay3">
                         <div class="menuitems">
                             <div class="menudescription">
                                 <h4>Paris-Brest</h4>
                                 <p>Revisité</p>
                             </div>
                             <p class="prix">18€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -101,6 +119,9 @@
                                 <p>Et glace à la vanille de Madagascar</p>
                             </div>
                             <p class="prix">22€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -109,6 +130,9 @@
                                 <p>Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <p class="prix">23€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
