--- a/pages/restaurant-2.html
+++ b/pages/restaurant-2.html
@@ -49,6 +49,9 @@
                             <p>Et sea farandole de petits légumes</p>
                         </div>
                         <p class="prix">35€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -57,6 +60,9 @@
                             <p>Et sa crème de truffe</p>
                         </div>
                         <p class="prix">4O€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
@@ -67,6 +73,9 @@
                             <p>Et sa crème de truffe</p>
                         </div>
                         <p class="prix">40€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -75,6 +84,9 @@
                                 <p>Et ses légumes de saison</p>
                             </div>
                             <p class="prix">35€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -83,6 +95,9 @@
                                 <p>et sa purée de panais</p>
                             </div>
                             <p class="prix">44€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
@@ -93,6 +108,9 @@
                                 <p>Du chef</p>
                             </div>
                             <p class="prix">18€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -101,6 +119,9 @@
                                 <p>Revisitée</p>
                             </div>
                             <p class="prix">22€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -109,6 +130,9 @@
                                 <p>À la noisette</p>
                             </div>
                             <p class="prix">23€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
