--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -49,6 +49,9 @@
                             <p>sur blini à la farine de blé noire</p>
                         </div>
                         <p class="prix">35€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -57,6 +60,9 @@
                             <p>Marinés aux zestes d'orange</p>
                         </div>
                         <p class="prix">2O€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -65,6 +71,9 @@
                                 <p>Confiture de figue et pain toasté</p>
                             </div>
                             <p class="prix">35€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
@@ -75,6 +84,9 @@
                             <p>Sur lit de purée de céléri-rave</p>
                         </div>
                         <p class="prix">40€</p>
+                        <div class="check">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -83,6 +95,9 @@
                                 <p>Purée de patate douce</p>
                             </div>
                             <p class="prix">35€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -91,6 +106,9 @@
                                 <p>ET riz sauvage aux zestes de citron</p>
                             </div>
                             <p class="prix">45€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
@@ -101,6 +119,9 @@
                                 <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <p class="prix">18€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -109,6 +130,9 @@
                                 <p>Avec son coulis de citron</p>
                             </div>
                             <p class="prix">22€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -117,6 +141,9 @@
                                 <p>Déstructurée</p>
                             </div>
                             <p class="prix">23€</p>
+                            <div class="check">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
