--- a/pages/restaurant-1.html
+++ b/pages/restaurant-1.html
@@ -31,7 +31,7 @@
                 </div>
             <section class="menus">
                 <h3 class="titremenu">ENTRÉE</h3>
-                <div class="menucategory delay1">
+                <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
                             <h4>Fricassée d'escargot</h4>
@@ -41,6 +41,7 @@
                         <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div>
+                    </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -66,7 +67,7 @@
                     </div>
                 </div>  
                 <h3 class="titremenu">PLATS</h3>
-                <div class="menucategory delay2">
+                <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
                             <h4>Filet de boeuf aux herbes</h4>
@@ -77,6 +78,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -88,6 +90,7 @@
                                 <i class="fa-solid fa-check"></i>
                             </div>
                         </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -101,7 +104,7 @@
                         </div>
                     </div>
                     <h3 class="titremenu">DESSERTS</h3>
-                    <div class="menucategory delay3">
+                    <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
                                 <h4>Paris-Brest</h4>
@@ -112,6 +115,7 @@
                                 <i class="fa-solid fa-check"></i>
                             </div>
                         </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -123,6 +127,7 @@
                                 <i class="fa-solid fa-check"></i>
                             </div>
                         </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
