--- a/pages/restaurant-2.html
+++ b/pages/restaurant-2.html
@@ -42,6 +42,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
@@ -52,6 +53,7 @@
                         <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div>
+                    </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -77,6 +79,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -88,6 +91,7 @@
                                 <i class="fa-solid fa-check"></i>
                             </div>
                         </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -112,6 +116,7 @@
                                 <i class="fa-solid fa-check"></i>
                             </div>
                         </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
