--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -42,6 +42,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
@@ -53,6 +54,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
@@ -63,6 +65,7 @@
                         <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div>
+                    </div>
                     </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -88,6 +91,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -98,6 +102,7 @@
                             <div class="check">
                                 <i class="fa-solid fa-check"></i>
                             </div>
+                        </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -122,6 +127,7 @@
                             <div class="check">
                                 <i class="fa-solid fa-check"></i>
                             </div>
+                        </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
