--- a/pages/restaurant-4.html
+++ b/pages/restaurant-4.html
@@ -42,6 +42,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                 <div class="menucategory">
                     <div class="menuitems">
                         <div class="menudescription">
@@ -52,6 +53,7 @@
                         <div class="check">
                             <i class="fa-solid fa-check"></i>
                         </div>
+                    </div>
                     </div>
                 <div class="menucategory">
                     <div class="menuitems">
@@ -77,6 +79,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                     </div>
+                    </div>
                     <div class="menucategory">
                         <div class="menuitems">
                             <div class="menudescription">
@@ -87,6 +90,7 @@
                             <div class="check">
                                 <i class="fa-solid fa-check"></i>
                             </div>
+                        </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
@@ -111,6 +115,7 @@
                             <div class="check">
                                 <i class="fa-solid fa-check"></i>
                             </div>
+                        </div>
                         </div>
                     <div class="menucategory">
                         <div class="menuitems">
